--- a/Index.html
+++ b/Index.html
@@ -11,17 +11,18 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/rzslider.css"/>
 </head>
 
-<body ng-cloak ng-class="{modalOpen: oneFilm == true }">
+<body ng-cloak ng-class="{modalOpen: oneFilm == true }" ng-controller="MainController as Main">
     <nav>
         <div class="wrapper">
             <div class="logo"><img src="img/logo.png" title="Logo EOI" alt="Logo EOI"></div>
             <div class="menu">
                 <ul>
                     <li><a href="/">Descrubrir</a></li>
-                    <li><a href="/popularity.html">Más recientes</a></li>
-                    <li><a href="/recentsFilms.html">Próximos extrenos</a></li>
+                    <li><a href="/recents.html">Más recientes</a></li>
+                    <li><a href="/upcoming.html">Próximos extrenos</a></li>
                     <li><a href="#"><i class="fa fa-caret-square-o-down" aria-hidden="true"></i></a>
                         <ul>
                             <li><a href="#">Mis favoritos</a></li>
@@ -32,7 +33,7 @@
             </div>
             <div class="search">
                 <div class="iconsearch"><img src="img/Search_Icon.png"></div>
-                <input type="search" class="inputsearch" placeholder="Encuentra tu película favorita">
+                <input type="search" ng-model="nameFilm" name="search" class="inputsearch" placeholder="Encuentra tu película favorita">
             </div>
         </div>
     </nav>
@@ -42,55 +43,39 @@
                 <div class="headeraside">
                     <div class="iconfilter"><img src="img/filter_icon.png"></div>
                     <div class="textheaderaside">
-                        <p>Filtrar</p>
-                        <p><span class="letterdelete">Borrar</span></p>
+                        <p><a href="#" ng-click="">Filtrar</a></p>
+                        <p><span class="letterdelete" ng-click="Main.resetFilter()">Borrar</span></p>
                     </div>
                 </div>
                 <div class="containeraside">
                     <div class="rowclasification">
                         <p>Año</p>
-                        <span>1975-2015</span>
+                        <span>{{Main.slider.minValue}}-{{Main.slider.maxValue}}</span>
                     </div>
-                    <img src="img/slider.jpg">
+                    <rzslider rz-slider-model="Main.slider.minValue" rz-slider-high="Main.slider.maxValue" rz-slider-options="Main.slider.options"></rzslider>
                     <div class="buttons">
-                        <a href="#" class="btnselect">Acción</a>
-                        <a href="#" class="btnnoselect">Aventura</a>
-                        <a href="#" class="btnnoselect">Animación</a>
-                        <a href="#" class="btnnoselect">Comedia</a>
-                        <a href="#" class="btnnoselect">Crimen</a>
-                        <a href="#" class="btnnoselect">Documental</a>
-                        <a href="#" class="btnnoselect">Drama</a>
-                        <a href="#" class="btnnoselect">Familiar</a>
-                        <a href="#" class="btnnoselect">Fantasía</a>
-                        <a href="#" class="btnnoselect">Históricas</a>
-                        <a href="#" class="btnnoselect">Horror</a>
-                        <a href="#" class="btnnoselect">Música</a>
-                        <a href="#" class="btnnoselect">Misterio</a>
-                        <a href="#" class="btnnoselect">Romance</a>
-                        <a href="#" class="btnnoselect">Ficción</a>
-                        <a href="#" class="btnnoselect">TV Movies</a>
-                        <a href="#" class="btnnoselect">Thriller</a>
-                        <a href="#" class="btnnoselect">Guerra</a>
-                        <a href="#" class="btnnoselect">Western</a>
+                        <a href="#" ng-class="{btnSelect: genre.option == genre.name, btnNoSelect: genre.option != genre.name}" ng-repeat="genre in Main.genres track by genre.id" ng-click="Main.optionSelect(genre)">{{genre.name}}</a>
                     </div>
                 </div>
             </div>
             <div ng-view class="subcontent"></div>
         </div>
     </section>
-    
+
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular/angular-route.min.js"></script>
-
+    <script src="libs/angular/rzslider.min.js"></script>
     <!-- App -->
     <script src="js/app.js"></script>
     <!-- Services -->
     <script src="js/factories/theMovieDB.factory.js"></script>
+    <script src="js/factories/genres.factory.js"></script>
     <!-- Components -->
     <!-- Controllers -->
+    <script src="js/controllers/main.controller.js"></script>
     <script src="js/controllers/home.controller.js"></script>
-    <script src="js/controllers/recentsFilms.controller.js"></script>
-    <script src="js/controllers/popularity.controller.js"></script>
+    <script src="js/controllers/upcoming.controller.js"></script>
+    <script src="js/controllers/recents.controller.js"></script>
 </body>
 
 </html>
