--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/jpg" href="img/icon.jpg" />
     <title>PelisEOI</title>
     <meta charset="UTF-8">
-    <base href="/PelisEOI">
+    <base href="https://jmbetancort.github.io/PelisEOI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
         rel="stylesheet">
