--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/jpg" href="img/icon.jpg" />
     <title>PelisEOI</title>
     <meta charset="UTF-8">
-    <base href="PelisEOI/">
+    <base href="https://jmbetancort.github.io/PelisEOI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/rzslider.css"/>
+    <link rel="stylesheet" type="text/css" href="{{site.base-url}}/css/style.css" />
+    <link rel="stylesheet" href="{{ site.base-url }}/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{{site.base-url}}/css/rzslider.css"/>
     <script src='http://code.jquery.com/jquery-latest.js'></script>
     
 </head>
@@ -22,13 +22,13 @@
             <div class="logo"><img src="img/logo.png" title="Logo EOI" alt="Logo EOI"></div>
             <div class="menu">
                 <ul>
-                    <li><a href="" ng-click="Main.visibleAside()">Descrubrir</a></li>
-                    <li><a href="recents">Más recientes</a></li>
-                    <li><a href="upcoming">Próximos extrenos</a></li>
+                    <li><a href="{{site.base-url}}/" ng-click="Main.visibleAside()">Descrubrir</a></li>
+                    <li><a href="{{site.base-url}}/recents">Más recientes</a></li>
+                    <li><a href="{{site.base-url}}/upcoming">Próximos extrenos</a></li>
                     <li><a href="#"><i class="fa fa-caret-square-o-down" aria-hidden="true"></i></a>
                         <ul>
-                            <li><a href="favourites">Mis favoritos</a></li>
-                            <li><a href="seeLater">Ver más tarde</a></li>
+                            <li><a href="{{site.base-url}}/favourites">Mis favoritos</a></li>
+                            <li><a href="{{site.base-url}}/seeLater">Ver más tarde</a></li>
                         </ul>
                     </li>
                 </ul>
