--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{site.base-url}}/css/style.css" />
-    <link rel="stylesheet" href="{{ site.base-url }}/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="{{site.base-url}}/css/rzslider.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/rzslider.css"/>
     <script src='http://code.jquery.com/jquery-latest.js'></script>
     
 </head>
