--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="logo"><img src="img/logo.png" title="Logo EOI" alt="Logo EOI"></div>
             <div class="menu">
                 <ul>
-                    <li><a href="" ng-click="Main.visibleAside()">Descrubrir</a></li>
-                    <li><a href="recents">Más recientes</a></li>
-                    <li><a href="upcoming">Próximos extrenos</a></li>
+                    <li><a href="/" ng-click="Main.visibleAside()">Descrubrir</a></li>
+                    <li><a href="/recents">Más recientes</a></li>
+                    <li><a href="/upcoming">Próximos extrenos</a></li>
                     <li><a href="#"><i class="fa fa-caret-square-o-down" aria-hidden="true"></i></a>
                         <ul>
-                            <li><a href="favourites">Mis favoritos</a></li>
-                            <li><a href="seeLater">Ver más tarde</a></li>
+                            <li><a href="/favourites">Mis favoritos</a></li>
+                            <li><a href="/seeLater">Ver más tarde</a></li>
                         </ul>
                     </li>
                 </ul>
