--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="logo"><img src="img/logo.png" title="Logo EOI" alt="Logo EOI"></div>
             <div class="menu">
                 <ul>
-                    <li><a href="/" ng-click="Main.visibleAside()">Descrubrir</a></li>
-                    <li><a href="/recents">Más recientes</a></li>
+                    <li><a href="PelisEOI/" ng-click="Main.visibleAside()">Descrubrir</a></li>
+                    <li><a href="PelisEOI/recents">Más recientes</a></li>
                     <li><a href="/upcoming">Próximos extrenos</a></li>
                     <li><a href="#"><i class="fa fa-caret-square-o-down" aria-hidden="true"></i></a>
                         <ul>
