--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/rzslider.css"/>
-    <script src='http://code.jquery.com/jquery-latest.js'></script>
+    <script src='https://code.jquery.com/jquery-latest.js'></script>
     
 </head>
 
