mejorando el control de la ventana modal

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <script src="js/factories/omdbApi.factory.js"></script>
     <script src="js/factories/openSubtitles.factory.js"></script>
     <script src="js/factories/local.storage.factory.js"></script>
+    <script src="js/factories/control.ventana.modal.factory.js"></script>
     <!-- Components -->
     <!-- Controllers -->
     <script src="js/controllers/main.controller.js"></script>
